# powerflow-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  chat.py  interactive_pf.py  pyproject.toml  web_app.py
docs/: chat.md  interactive_pf.md  web_app.md
examples/: explore_case14.py
powerflow_mcp/pandapower/: run_pf.py
tmp/: case14.p  case14_solution_log.md  ieee30.p  ieee30_challenge.p  ieee30_challenge_solution_log.md  ieee30_solution_log.md
